--- a/superstars/superpeach.html
+++ b/superstars/superpeach.html
@@ -93,13 +93,13 @@
         </h2>
         <p>
             Total: 55 Spaces!
-            23 Blue Spaces
-            5 Red Spaces
-            11 Lucky Spaces
-            7 Happening Spaces
-            3 Item Spaces
-            3 Bowser Spaces
-            2 VS Spaces
+            23 Blue Spaces, 
+            5 Red Spaces, 
+            11 Lucky Spaces, 
+            7 Happening Spaces, 
+            3 Item Spaces, 
+            3 Bowser Spaces, 
+            2 VS Spaces, 
             1 Chance Time Space
         </p>
         <h2>
