--- a/superstars/superspace.html
+++ b/superstars/superspace.html
@@ -101,38 +101,35 @@
         </h2>
         <p>
             Total: 55 Spaces!
-            23 Blue Spaces
-            5 Red Spaces
-            11 Lucky Spaces
-            7 Happening Spaces
-            3 Item Spaces
-            3 Bowser Spaces
-            2 VS Spaces
+            23 Blue Spaces. 
+            5 Red Spaces, 
+            11 Lucky Spaces, 
+            7 Happening Spaces, 
+            3 Item Spaces, 
+            3 Bowser Spaces, 
+            2 VS Spaces, 
             1 Chance Time Space
         </p>
         <h2>
             Best Items!
         </h2>
         <p>
-            I recommend stashing warp blocks in your inventory because it's a cheap way to travel between the islands and destroy your 
-            opponents. I say this because there is a lot of variance with this board since the star could move at anytime, so having one 
-            of these handy has a great chance of putting you in a great situation. Movement isn't that big of a deal since the board is 
-            pretty small and you just cycle around for the most part; however, having movement items like mushrooms, double, and triple 
-            dice blocks are definitely still useful and give less risk! Also curse blocks are really good on this map, but Bowser gives 
-            a ton of these when you cross him, so I would recommend getting them from the store.
+            Movement items are definitely the best items for this board because the board is so big and there are a lot of options. Triple Dice blocks are definitely 
+            the best because it allows you to go the farthest in one turn. Warp blocks are pretty bad on this map because there are so many options to get to one place 
+            so it's more likely that you will put yourself in a disadvantage then benefitting from it. Curse blocks can be used to destory your opponent by not letting 
+            him or her escape the laser. This could be a strategy if an opponent has a lot of coins. Using a golden dice block is also a good choice because 
+            there are specific spaces that you want to land on and also boost your happening space count. Having a Skeleton Key in hand is also a pretty smart strategy.
         </p>
         <h2>
             Strategies!
         </h2>
         <p>
-            I recommend not spending an obscene amount of coins at thowmps to mess with your opponents. Instead, I would just spend 
-            the bear minimum to cross because there is so much variance. For example, you spend all of your coins to trap the other 
-            opponents on the island without the star, and then someone lands on a happening space and moves the star. Now you are 
-            locked on an island because you can't afford to go back. However, there are always situations where blocking is beneficial, 
-            especially when there is a lot of coins in the coin economy. For example, blocking first place off an island can allow you to 
-            catch up can be extremely good, especially since the coin star has changed to whoever collects the most coins, meaning you 
-            do not have to save coins anymore. Also, curse blocking people to land on happening spaces is always a good way to get the 
-            star moved. However, be careful you aren't giving away the happening star!
+            Space land is all about movement strategy since there are so many junctions and the amount of spaces you move. Don't be afraid to be in the Bowser 
+            Coin Beam range because even if you get hit, losing all of your coins is bad, but it won't ruin your game plan since it is very easy to earn coins in this 
+            game. Utilize the Thwomps and the Whomps as it can definitely put your opponents in a bad situation. Using a Golden Dice Block to land on that space can 
+            boost your happening space count as well. Also, using a Skeleton Key on the top-left gate is a good strategy because boo is on that path. Also, that Skeleton 
+            Gate puts you in a very good position to hit the other boo on the right path. If you have over a 100 coins, you could steal two stars in two turns if you use 
+            triple dice.
         </p>
         </div>
 
