--- a/superstars/superyoshi.html
+++ b/superstars/superyoshi.html
@@ -88,15 +88,15 @@
         </h2>
         <p>
             Total: 55 Spaces! <br>
-            23 Blue Spaces
-            5 Red Spaces
-            11 Lucky Spaces
-            7 Happening Spaces
-            3 Item Spaces
-            3 Bowser Spaces
-            2 VS Spaces
-            1 Chance Time Space
-            1 Item Shop
+            23 Blue Spaces, 
+            5 Red Spaces, 
+            11 Lucky Spaces, 
+            7 Happening Spaces, 
+            3 Item Spaces, 
+            3 Bowser Spaces, 
+            2 VS Spaces, 
+            1 Chance Time Space, 
+            1 Item Shop, 
             0 Koopa Banks
         </p>
         <h2>
