--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <html lang="en">
         <head>
+            <link rel="stylesheet" href="index.css">
             <title>Mario Party Helper</title>
         </head>
         <body>
