--- a/diceblock/diceblock.html
+++ b/diceblock/diceblock.html
@@ -22,8 +22,8 @@
             </div>
             <div class="description">
                 <p id="info">
-                    This Dice Block Generator works by making an API call from the Random Number Generator API. This simulates 5 different items: the Normal Dice block (1-10), 
-                    the Dice Block with a Mushroom (6-15), Double Dice Block (2-20), Triple Dice Block (3-30), and Curse Dice Block (1-3).
+                    This Dice Block Generator works by making an API call from the Random Number Generator API. This simulates 5 different items: Normal Dice block (1-10), 
+                    Dice Block with a Mushroom (6-15), Double Dice Block (2-20), Triple Dice Block (3-30), and Curse Dice Block (1-3).
                 </p>
             </div>
             <script src="randomint.js"></script>
