--- a/superstars/superboo.html
+++ b/superstars/superboo.html
@@ -101,15 +101,16 @@
                 Board Layout!
             </h2>
             <p>
-                Total: 55 Spaces!
-                23 Blue Spaces, 
-                5 Red Spaces, 
-                11 Lucky Spaces, 
+                Total: 93 Spaces!
+                34 Blue Spaces, 
+                8 Red Spaces, 
+                24 Lucky Spaces, 
                 7 Happening Spaces, 
-                3 Item Spaces, 
-                3 Bowser Spaces, 
-                2 VS Spaces, 
-                1 Chance Time Space
+                7 Item Spaces, 
+                4 Bowser Spaces, 
+                4 VS Spaces, 
+                2 Chance Time Spaces, 
+                3 Bank Spaces
             </p>
             <h2>
                 Best Items!
