--- a/superstars/superpeach.html
+++ b/superstars/superpeach.html
@@ -92,15 +92,14 @@
             Board Layout!
         </h2>
         <p>
-            Total: 55 Spaces!
-            23 Blue Spaces, 
-            5 Red Spaces, 
-            11 Lucky Spaces, 
-            7 Happening Spaces, 
-            3 Item Spaces, 
-            3 Bowser Spaces, 
+            Total: 53 Spaces!
+            21 Blue Spaces, 
+            6 Red Spaces, 
+            9 Lucky Spaces, 
+            11 Happening Spaces, 
+            2 Bowser Spaces, 
             2 VS Spaces, 
-            1 Chance Time Space
+            2 Chance Time Spaces
         </p>
         <h2>
             Best Items!
