--- a/superstars/superyoshi.html
+++ b/superstars/superyoshi.html
@@ -87,7 +87,7 @@
             Board Layout!
         </h2>
         <p>
-            Total: 55 Spaces! <br>
+            Total: 55 Spaces! 
             23 Blue Spaces, 
             5 Red Spaces, 
             11 Lucky Spaces, 
@@ -95,9 +95,7 @@
             3 Item Spaces, 
             3 Bowser Spaces, 
             2 VS Spaces, 
-            1 Chance Time Space, 
-            1 Item Shop, 
-            0 Koopa Banks
+            1 Chance Time Space
         </p>
         <h2>
             Best Items!
