--- a/superstars/superspace.html
+++ b/superstars/superspace.html
@@ -100,15 +100,16 @@
             Board Layout!
         </h2>
         <p>
-            Total: 55 Spaces!
-            23 Blue Spaces. 
-            5 Red Spaces, 
-            11 Lucky Spaces, 
-            7 Happening Spaces, 
-            3 Item Spaces, 
+            Total: 95 Spaces!
+            40 Blue Spaces. 
+            9 Red Spaces, 
+            15 Lucky Spaces, 
+            5 Happening Spaces, 
+            15 Item Spaces, 
             3 Bowser Spaces, 
-            2 VS Spaces, 
-            1 Chance Time Space
+            4 VS Spaces, 
+            2 Chance Time Spaces, 
+            2 Bank Spaces
         </p>
         <h2>
             Best Items!
