--- a/superstars/superwood.html
+++ b/superstars/superwood.html
@@ -103,15 +103,16 @@
             Board Layout!
         </h2>
         <p>
-            Total: 55 Spaces!
-            23 Blue Spaces, 
-            5 Red Spaces, 
-            11 Lucky Spaces, 
-            7 Happening Spaces, 
-            3 Item Spaces, 
+            Total: 91 Spaces!
+            35 Blue Spaces, 
+            7 Red Spaces, 
+            15 Lucky Spaces, 
+            9 Happening Spaces, 
+            14 Item Spaces, 
             3 Bowser Spaces, 
-            2 VS Spaces, 
-            1 Chance Time Space, 
+            3 VS Spaces, 
+            2 Chance Time Spaces, 
+            3 Bank Spaces  
         </p>
         <h2>
             Best Items!
